  available via errstr()
- implement/test/document set_file_limits()/get_file_limits() methods,
  which allow limits on the size of image files read.
- new example for convert() method based on Leolo's query
- implement getscanline(), setscanline() and getsamples() methods.
  These are low level methods for fast access to image data, based on
  existing C functions that Imager uses internally.
- limit limits.c to C89
- the gif tests weren't skipping enough when there was no gif support
- move include t1lib out of image.h to font.c, since nothing it 
  provides is needed elsewhere.
- minor POD fixes
- added a brief tutorial
- Imager::Font->new() for the tt (Freetype 1.x) driver now correctly
  handles errors from i_tt_new(), and passed error messages now 
  generated by i_tt_new().
- renamed lib/Imager/Cookbook.pm to lib/Imager/Cookbook.pod - CPANTS
  complains about it not having 'use strict;'
- add samples/replace_color.pl
- you can now supply a page parameter to read() to read a given page
  from a TIFF file.
- added samples/border.pl, and notes on adding a border in 
  Imager::Cookbook.
- added sampled/slant_text.pl, and notes on shearing/rotating text in
  Imager::Cookbook.
- INCOMPATIBLE CHANGE:
  reading a gif file will now read the first image from the file rather 
  than the a consolidated image.  If you want the old behaviour supply
  C<< gif_consolidate=>1 >> to the read() method.  Older versions of 
  Imager will accept this parameter and produce the same result.
- you can now supply a page parameter to read() to read a given page
  from a GIF file.
- reading a multi-image GIF was leaking memory (a line buffer per file)
- maxcolors now must be at least 1 when creating a paletted image.

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
